# brokestack

./: .dockerignore  .env.example  Dockerfile  README.md  atlas.hcl  docker-compose.prod.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml
apps/api/: go.mod  tmp_dbusers.go
apps/api/cmd/server/: main.go
apps/api/internal/config/: config.go
apps/api/internal/database/: bootstrap.go  db.go  models.go
apps/api/internal/handlers/: app.go  automations.go  e2e.go  images.go  openapi.go  openapi.yaml
apps/api/internal/iam/: automation.go  e2e.go  images.go  service.go
apps/web/: index.html  package.json  vite.config.ts
apps/web/e2e/: dashboard-images-api.spec.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/scripts/: prerender.mjs
apps/web/src/: app-routes.tsx  entry-server.tsx  index.css
apps/web/src/lib/: seo.ts  (+5 more)
apps/worker/: README.md  pyproject.toml
apps/worker/brokestack_worker/: __init__.py  callbacks.py  config.py  main.py  models.py  registry.py  runtime.py
apps/worker/brokestack_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/worker/brokestack_worker/providers/: base.py  chatgpt.py
apps/worker/tests/: test_chatgpt_adapter.py  test_runtime.py
db/migrations/: 20260316000000_init.sql  20260316010000_images_api.sql  atlas.sum
docker/: Caddyfile.internal  brokestack-entrypoint.sh  start-api.sh  start-redis.sh  start-worker.sh  supervisord.conf
docs/architecture/: python-worker.md
scripts/: check-migration-drift.mjs  deploy-production.sh  prepare-e2e-db.mjs
(+40 files in other folders)
