[project]
name = "brokestack-worker"
version = "0.1.0"
description = "Python execution worker for BrokeStack tools, workflows, and scheduled jobs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brokestack_worker*"]
