[project]
name = "brokestack-worker"
version = "0.1.0"
description = "Python execution worker for BrokeStack tools, workflows, and scheduled jobs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pillow>=11.2.0,<12.0.0",
    "selenium>=4.32.0,<5.0.0",
    "undetected-chromedriver>=3.5.5,<4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brokestack_worker*"]
